src/org/tzi/use/STMPlugin/logic/uml2stm/stm2use/STMParser.java
// Generated from STMParser.g4 by ANTLR 4.9.3
package org.tzi.use.logic.uml2stm.stm2use;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class STMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, CDATA=2, DTD=3, EntityRef=4, CharRef=5, SEA_WS=6, OPEN=7, XMLDeclOpen=8, 
		TEXT=9, CLOSE=10, SPECIAL_CLOSE=11, SLASH_CLOSE=12, SLASH=13, EQUALS=14, 
		STRING=15, Model=16, OwnedElems=17, SnapObjs=18, Attributes=19, QOps=20, 
		Params=21, Conditions=22, Constraints=23, Spec=24, Lang=25, Body=26, OwnedEnd=27, 
		OwnedLiteral=28, Gization=29, Context=30, Name=31, S=32, PI=33;
	public static final int
		RULE_document = 0, RULE_prolog = 1, RULE_content = 2, RULE_element = 3, 
		RULE_modelElem = 4, RULE_modelOwnedElem = 5, RULE_compClassElem = 6, RULE_attributeElem = 7, 
		RULE_queryOpElem = 8, RULE_paramsElem = 9, RULE_condElem = 10, RULE_constrElem = 11, 
		RULE_specElem = 12, RULE_bodyElem = 13, RULE_langElem = 14, RULE_ownedEndElem = 15, 
		RULE_literalElem = 16, RULE_genElem = 17, RULE_ctxElem = 18, RULE_miscElem = 19, 
		RULE_reference = 20, RULE_attribute = 21, RULE_chardata = 22, RULE_misc = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "prolog", "content", "element", "modelElem", "modelOwnedElem", 
			"compClassElem", "attributeElem", "queryOpElem", "paramsElem", "condElem", 
			"constrElem", "specElem", "bodyElem", "langElem", "ownedEndElem", "literalElem", 
			"genElem", "ctxElem", "miscElem", "reference", "attribute", "chardata", 
			"misc"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, "'<'", null, null, "'>'", null, 
			"'/>'", "'/'", "'='", null, "'sTM:Model'", "'ownedElements'", "'snapshotObjects'", 
			"'attributes'", "'queryOperations'", "'parameters'", null, "'constraints'", 
			"'specification'", "'language'", "'body'", "'ownedEnd'", "'ownedLiteral'", 
			"'generalization'", "'context'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "CDATA", "DTD", "EntityRef", "CharRef", "SEA_WS", "OPEN", 
			"XMLDeclOpen", "TEXT", "CLOSE", "SPECIAL_CLOSE", "SLASH_CLOSE", "SLASH", 
			"EQUALS", "STRING", "Model", "OwnedElems", "SnapObjs", "Attributes", 
			"QOps", "Params", "Conditions", "Constraints", "Spec", "Lang", "Body", 
			"OwnedEnd", "OwnedLiteral", "Gization", "Context", "Name", "S", "PI"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "STMParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public STMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DocumentContext extends ParserRuleContext {
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public PrologContext prolog() {
			return getRuleContext(PrologContext.class,0);
		}
		public List<MiscContext> misc() {
			return getRuleContexts(MiscContext.class);
		}
		public MiscContext misc(int i) {
			return getRuleContext(MiscContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).exitDocument(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==XMLDeclOpen) {
				{
				setState(48);
				prolog();
				}
			}

			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT) | (1L << SEA_WS) | (1L << PI))) != 0)) {
				{
				{
				setState(51);
				misc();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			element();
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT) | (1L << SEA_WS) | (1L << PI))) != 0)) {
				{
				{
				setState(58);
				misc();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrologContext extends ParserRuleContext {
		public TerminalNode XMLDeclOpen() { return getToken(STMParser.XMLDeclOpen, 0); }
		public TerminalNode SPECIAL_CLOSE() { return getToken(STMParser.SPECIAL_CLOSE, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public PrologContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prolog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).enterProlog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).exitProlog(this);
		}
	}

	public final PrologContext prolog() throws RecognitionException {
		PrologContext _localctx = new PrologContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prolog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(XMLDeclOpen);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Name) {
				{
				{
				setState(65);
				attribute();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(SPECIAL_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContentContext extends ParserRuleContext {
		public List<ChardataContext> chardata() {
			return getRuleContexts(ChardataContext.class);
		}
		public ChardataContext chardata(int i) {
			return getRuleContext(ChardataContext.class,i);
		}
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public List<ReferenceContext> reference() {
			return getRuleContexts(ReferenceContext.class);
		}
		public ReferenceContext reference(int i) {
			return getRuleContext(ReferenceContext.class,i);
		}
		public List<TerminalNode> CDATA() { return getTokens(STMParser.CDATA); }
		public TerminalNode CDATA(int i) {
			return getToken(STMParser.CDATA, i);
		}
		public List<TerminalNode> PI() { return getTokens(STMParser.PI); }
		public TerminalNode PI(int i) {
			return getToken(STMParser.PI, i);
		}
		public List<TerminalNode> COMMENT() { return getTokens(STMParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(STMParser.COMMENT, i);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).exitContent(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_content);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEA_WS || _la==TEXT) {
				{
				setState(73);
				chardata();
				}
			}

			setState(88);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(81);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case OPEN:
						{
						setState(76);
						element();
						}
						break;
					case EntityRef:
					case CharRef:
						{
						setState(77);
						reference();
						}
						break;
					case CDATA:
						{
						setState(78);
						match(CDATA);
						}
						break;
					case PI:
						{
						setState(79);
						match(PI);
						}
						break;
					case COMMENT:
						{
						setState(80);
						match(COMMENT);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(84);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SEA_WS || _la==TEXT) {
						{
						setState(83);
						chardata();
						}
					}

					}
					} 
				}
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public ModelElemContext modelElem() {
			return getRuleContext(ModelElemContext.class,0);
		}
		public ModelOwnedElemContext modelOwnedElem() {
			return getRuleContext(ModelOwnedElemContext.class,0);
		}
		public CompClassElemContext compClassElem() {
			return getRuleContext(CompClassElemContext.class,0);
		}
		public AttributeElemContext attributeElem() {
			return getRuleContext(AttributeElemContext.class,0);
		}
		public QueryOpElemContext queryOpElem() {
			return getRuleContext(QueryOpElemContext.class,0);
		}
		public ParamsElemContext paramsElem() {
			return getRuleContext(ParamsElemContext.class,0);
		}
		public CondElemContext condElem() {
			return getRuleContext(CondElemContext.class,0);
		}
		public ConstrElemContext constrElem() {
			return getRuleContext(ConstrElemContext.class,0);
		}
		public SpecElemContext specElem() {
			return getRuleContext(SpecElemContext.class,0);
		}
		public BodyElemContext bodyElem() {
			return getRuleContext(BodyElemContext.class,0);
		}
		public LangElemContext langElem() {
			return getRuleContext(LangElemContext.class,0);
		}
		public OwnedEndElemContext ownedEndElem() {
			return getRuleContext(OwnedEndElemContext.class,0);
		}
		public LiteralElemContext literalElem() {
			return getRuleContext(LiteralElemContext.class,0);
		}
		public GenElemContext genElem() {
			return getRuleContext(GenElemContext.class,0);
		}
		public CtxElemContext ctxElem() {
			return getRuleContext(CtxElemContext.class,0);
		}
		public MiscElemContext miscElem() {
			return getRuleContext(MiscElemContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_element);
		try {
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				modelElem();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				modelOwnedElem();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				compClassElem();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				attributeElem();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(95);
				queryOpElem();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(96);
				paramsElem();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(97);
				condElem();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(98);
				constrElem();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(99);
				specElem();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(100);
				bodyElem();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(101);
				langElem();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(102);
				ownedEndElem();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(103);
				literalElem();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(104);
				genElem();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(105);
				ctxElem();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(106);
				miscElem();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelElemContext extends ParserRuleContext {
		public List<TerminalNode> OPEN() { return getTokens(STMParser.OPEN); }
		public TerminalNode OPEN(int i) {
			return getToken(STMParser.OPEN, i);
		}
		public List<TerminalNode> Model() { return getTokens(STMParser.Model); }
		public TerminalNode Model(int i) {
			return getToken(STMParser.Model, i);
		}
		public List<TerminalNode> CLOSE() { return getTokens(STMParser.CLOSE); }
		public TerminalNode CLOSE(int i) {
			return getToken(STMParser.CLOSE, i);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode SLASH() { return getToken(STMParser.SLASH, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode SLASH_CLOSE() { return getToken(STMParser.SLASH_CLOSE, 0); }
		public ModelElemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelElem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).enterModelElem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).exitModelElem(this);
		}
	}

	public final ModelElemContext modelElem() throws RecognitionException {
		ModelElemContext _localctx = new ModelElemContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_modelElem);
		int _la;
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				match(OPEN);
				setState(110);
				match(Model);
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Name) {
					{
					{
					setState(111);
					attribute();
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(117);
				match(CLOSE);
				setState(118);
				content();
				setState(119);
				match(OPEN);
				setState(120);
				match(SLASH);
				setState(121);
				match(Model);
				setState(122);
				match(CLOSE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				match(OPEN);
				setState(125);
				match(Model);
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Name) {
					{
					{
					setState(126);
					attribute();
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(132);
				match(SLASH_CLOSE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelOwnedElemContext extends ParserRuleContext {
		public List<TerminalNode> OPEN() { return getTokens(STMParser.OPEN); }
		public TerminalNode OPEN(int i) {
			return getToken(STMParser.OPEN, i);
		}
		public List<TerminalNode> OwnedElems() { return getTokens(STMParser.OwnedElems); }
		public TerminalNode OwnedElems(int i) {
			return getToken(STMParser.OwnedElems, i);
		}
		public List<TerminalNode> CLOSE() { return getTokens(STMParser.CLOSE); }
		public TerminalNode CLOSE(int i) {
			return getToken(STMParser.CLOSE, i);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode SLASH() { return getToken(STMParser.SLASH, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode SLASH_CLOSE() { return getToken(STMParser.SLASH_CLOSE, 0); }
		public ModelOwnedElemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelOwnedElem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).enterModelOwnedElem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).exitModelOwnedElem(this);
		}
	}

	public final ModelOwnedElemContext modelOwnedElem() throws RecognitionException {
		ModelOwnedElemContext _localctx = new ModelOwnedElemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_modelOwnedElem);
		int _la;
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(OPEN);
				setState(136);
				match(OwnedElems);
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Name) {
					{
					{
					setState(137);
					attribute();
					}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(143);
				match(CLOSE);
				setState(144);
				content();
				setState(145);
				match(OPEN);
				setState(146);
				match(SLASH);
				setState(147);
				match(OwnedElems);
				setState(148);
				match(CLOSE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				match(OPEN);
				setState(151);
				match(OwnedElems);
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Name) {
					{
					{
					setState(152);
					attribute();
					}
					}
					setState(157);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(158);
				match(SLASH_CLOSE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompClassElemContext extends ParserRuleContext {
		public List<TerminalNode> OPEN() { return getTokens(STMParser.OPEN); }
		public TerminalNode OPEN(int i) {
			return getToken(STMParser.OPEN, i);
		}
		public List<TerminalNode> SnapObjs() { return getTokens(STMParser.SnapObjs); }
		public TerminalNode SnapObjs(int i) {
			return getToken(STMParser.SnapObjs, i);
		}
		public List<TerminalNode> CLOSE() { return getTokens(STMParser.CLOSE); }
		public TerminalNode CLOSE(int i) {
			return getToken(STMParser.CLOSE, i);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode SLASH() { return getToken(STMParser.SLASH, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode SLASH_CLOSE() { return getToken(STMParser.SLASH_CLOSE, 0); }
		public CompClassElemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compClassElem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).enterCompClassElem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).exitCompClassElem(this);
		}
	}

	public final CompClassElemContext compClassElem() throws RecognitionException {
		CompClassElemContext _localctx = new CompClassElemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_compClassElem);
		int _la;
		try {
			setState(185);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				match(OPEN);
				setState(162);
				match(SnapObjs);
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Name) {
					{
					{
					setState(163);
					attribute();
					}
					}
					setState(168);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(169);
				match(CLOSE);
				setState(170);
				content();
				setState(171);
				match(OPEN);
				setState(172);
				match(SLASH);
				setState(173);
				match(SnapObjs);
				setState(174);
				match(CLOSE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(176);
				match(OPEN);
				setState(177);
				match(SnapObjs);
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Name) {
					{
					{
					setState(178);
					attribute();
					}
					}
					setState(183);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(184);
				match(SLASH_CLOSE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeElemContext extends ParserRuleContext {
		public List<TerminalNode> OPEN() { return getTokens(STMParser.OPEN); }
		public TerminalNode OPEN(int i) {
			return getToken(STMParser.OPEN, i);
		}
		public List<TerminalNode> Attributes() { return getTokens(STMParser.Attributes); }
		public TerminalNode Attributes(int i) {
			return getToken(STMParser.Attributes, i);
		}
		public List<TerminalNode> CLOSE() { return getTokens(STMParser.CLOSE); }
		public TerminalNode CLOSE(int i) {
			return getToken(STMParser.CLOSE, i);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode SLASH() { return getToken(STMParser.SLASH, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode SLASH_CLOSE() { return getToken(STMParser.SLASH_CLOSE, 0); }
		public AttributeElemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributeElem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).enterAttributeElem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).exitAttributeElem(this);
		}
	}

	public final AttributeElemContext attributeElem() throws RecognitionException {
		AttributeElemContext _localctx = new AttributeElemContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attributeElem);
		int _la;
		try {
			setState(211);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(187);
				match(OPEN);
				setState(188);
				match(Attributes);
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Name) {
					{
					{
					setState(189);
					attribute();
					}
					}
					setState(194);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(195);
				match(CLOSE);
				setState(196);
				content();
				setState(197);
				match(OPEN);
				setState(198);
				match(SLASH);
				setState(199);
				match(Attributes);
				setState(200);
				match(CLOSE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(202);
				match(OPEN);
				setState(203);
				match(Attributes);
				setState(207);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Name) {
					{
					{
					setState(204);
					attribute();
					}
					}
					setState(209);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(210);
				match(SLASH_CLOSE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryOpElemContext extends ParserRuleContext {
		public List<TerminalNode> OPEN() { return getTokens(STMParser.OPEN); }
		public TerminalNode OPEN(int i) {
			return getToken(STMParser.OPEN, i);
		}
		public List<TerminalNode> QOps() { return getTokens(STMParser.QOps); }
		public TerminalNode QOps(int i) {
			return getToken(STMParser.QOps, i);
		}
		public List<TerminalNode> CLOSE() { return getTokens(STMParser.CLOSE); }
		public TerminalNode CLOSE(int i) {
			return getToken(STMParser.CLOSE, i);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode SLASH() { return getToken(STMParser.SLASH, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode SLASH_CLOSE() { return getToken(STMParser.SLASH_CLOSE, 0); }
		public QueryOpElemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryOpElem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).enterQueryOpElem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof STMParserListener ) ((STMParserListener)listener).exitQueryOpElem(this);
		}
	}

	public final QueryOpElemContext queryOpElem() throws RecognitionException {
		QueryOpElemContext _localctx = new QueryOpElemContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_queryOpElem);
		int _la;
